--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,3 +41,15 @@ tasks.named('test') {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
 }
+tasks.register("hello") {
+    doLast {
+        println('Hello!')
+    }
+}
+
+tasks.register("greet") {
+    doLast {
+        println('How are you?')
+    }
+    dependsOn("hello")
+}
