Create tyre endpoint

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.liquibase.enabled=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/chepalle
 spring.datasource.username=postgres
 spring.datasource.password=root
+spring.jpa.show-sql=true
