--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.4'
     id 'org.liquibase.gradle' version '2.2.0'
     id 'java'
+    id "org.sonarqube" version "6.0.1.5171"
 }
 
 repositories {
@@ -20,6 +21,10 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation 'org.springframework.security:spring-security-oauth2-resource-server'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
@@ -28,7 +33,11 @@ dependencies {
     implementation 'org.liquibase:liquibase-core'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
-
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2023.0.1" // Update to the latest version
+    }
+}
 // Apply a specific Java toolchain to ease working on different environments.
 java {
     toolchain {
@@ -41,19 +50,10 @@ application {
     mainClass = 'org.example.App'
 }
 
-tasks.named('test') {
-    // Use JUnit Platform for unit tests.
-    useJUnitPlatform()
-}
-tasks.register("hello") {
-    doLast {
-        println('Hello!')
+sonar {
+    properties {
+        property "sonar.projectKey", "Ekrem05_Chepalle"
+        property "sonar.organization", "chepalle"
+        property "sonar.host.url", "https://sonarcloud.io"
     }
-}
-
-tasks.register("greet") {
-    doLast {
-        println('How are you?')
-    }
-    dependsOn("hello")
 }
