Authentication filter added
It executes after all requests and checks if they need authorization. If they do, it validates the provided token if there is such.

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -4,3 +4,15 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/chepalle
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.show-sql=true
+
+spring.security.oauth2.client.registration.github.client-id=Ov23lidNYqNbBbp0RcHB
+spring.security.oauth2.client.registration.github.client-secret=f9f1282ba0d86986fde1f60a71bd49917e83515c
+spring.security.oauth2.client.registration.github.scope=user:email
+jwt.secret=my_super_secret_key
+
+
+spring.security.oauth2.client.provider.github.authorization-uri=https://github.com/login/oauth/authorize
+spring.security.oauth2.client.provider.github.token-uri=https://github.com/login/oauth/access_token
+spring.security.oauth2.client.provider.github.user-info-uri=https://api.github.com/user
+
+logging.level.org.springframework.security=DEBUG
