--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.auth0:java-jwt:4.4.0'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.security:spring-security-oauth2-resource-server'
     implementation 'org.springframework.boot:spring-boot-starter-security'
